<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	<LinearLayout
		android:id="@+id/bg"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="8dp"
		android:background="@drawable/bg_glass_card_high"
		android:orientation="vertical">
		<LinearLayout
			android:id="@+id/lin1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:padding="12dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="@drawable/ripple_glass_pill"
			android:clickable="true"
			android:focusable="true"
			>
			<ImageView
				android:id="@+id/imageview4"
				android:focusable="false"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="10dp"
				android:src="@drawable/ic_ms_edit"
				android:contentDescription="@string/cd_edit"
				android:scaleType="fitCenter"
				android:layout_gravity="center_horizontal|center_vertical" />
			<TextView
				android:id="@+id/textview1"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="Edit "
				android:textSize="14sp"
				android:textColor="@color/tofi_text_primary"
				android:fontFamily="@font/tajawal"
				android:layout_gravity="center_horizontal|center_vertical"
				android:layout_weight="1" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/lin2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:padding="12dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="@drawable/ripple_glass_pill"
			android:clickable="true"
			android:focusable="true"
			>
			<ImageView
				android:id="@+id/imageview2"
				android:focusable="false"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="10dp"
				android:src="@drawable/ic_ms_delete"
				android:contentDescription="@string/cd_delete"
				android:scaleType="fitCenter"
				android:layout_gravity="center_horizontal|center_vertical" />
			<TextView
				android:id="@+id/textview2"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="Delete "
				android:textSize="14sp"
				android:textColor="@color/tofi_text_primary"
				android:fontFamily="@font/tajawal"
				android:layout_gravity="center_horizontal|center_vertical"
				android:layout_weight="1" />
		</LinearLayout>
		<LinearLayout
			android:id="@+id/lin3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="4dp"
			android:padding="12dp"
			android:gravity="center_horizontal|center_vertical"
			android:orientation="horizontal"
			android:background="@drawable/ripple_glass_pill"
			android:clickable="true"
			android:focusable="true"
			>
			<ImageView
				android:id="@+id/imageview3"
				android:focusable="false"
				android:layout_width="24dp"
				android:layout_height="24dp"
				android:layout_marginLeft="2dp"
				android:layout_marginRight="10dp"
				android:src="@drawable/ic_ms_close"
				android:contentDescription="@string/cd_close"
				android:scaleType="fitCenter"
				android:layout_gravity="center_horizontal|center_vertical" />
			<TextView
				android:id="@+id/textview3"
				android:focusable="false"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:gravity="center_horizontal|center_vertical"
				android:text="Close"
				android:textSize="14sp"
				android:textColor="@color/tofi_text_primary"
				android:fontFamily="@font/tajawal"
				android:layout_gravity="center_horizontal|center_vertical"
				android:layout_weight="1" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
